added password verification, profile page, add users to more tables, added logout feature

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
        </li>
        <li class="nav-item">
-        <a class="nav-link" href="#">Profile</a>
+        <a class="nav-link" href="profilePage.html">Profile</a>
        </li>
        <li class="nav-item">
         <a class="nav-link" href="#">Help</a>
@@ -166,7 +166,7 @@
    <script src="js/jquery-1.12.4.js"></script>
    <script src="js/jquery.dataTables.min.js"></script>
    <script src="js/index.js"></script>
-   <script src="js/navBar.js"></script>
+ <script src="js/navBar.js"></script>
 
 
   </body>
