--- a/RSORequest.html
+++ b/RSORequest.html
@@ -38,7 +38,7 @@
 		  <a class="nav-link" href="index.html">Home</a>
 		 </li>
 		 <li class="nav-item">
-		  <a class="nav-link" href="#">Profile</a>
+		  <a class="nav-link" href="profilePage.html">Profile</a>
 		 </li>
 		 <li class="nav-item">
 		  <a class="nav-link" href="#">Help</a>
