--- a/EventRequest.html
+++ b/EventRequest.html
@@ -1,7 +1,8 @@
 
+	<head>
 	<title>Event Manager</title>
 
-	<!-- Bootstrap core CSS
+	<!-- Bootstrap core CSS-->
 	<!--<link href="css/bootstrap.min.css" rel="stylesheet">-->
 	<link href="css/bootstrap.css" rel="stylesheet">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
@@ -10,7 +11,7 @@
 	<link href="css/bootstrap-reboot.css" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
-	<link href="css/main.css" rel="stylesheet">
+	<!--<link href="css/main.css" rel="stylesheet">
 
 
 
@@ -23,18 +24,28 @@
 	<script src="js/jquery.dataTables.min.js"></script> 
 	 <script src="js/dataTables.bootstrap4.min.js"></script>                                                
 	 <script src="js/EventRequest.js"></script>															
-	<!--	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>		eeeorrr!!!!	-->		
+	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
+	<script src="js/locationpicker.jquery.min.js"></script>
 
 
+	<script language="javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>-->
 
-	<script language="javascript" src="https://maps.googleapis.com/maps/api/js?v=3"></script>
+	<link href="css/main.css" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.min.js"></script>
 
-
-
-
-
+	<script src="js/jquery-1.12.4.js"></script>
+	<script src="js/jquery.dataTables.min.js"></script>
+	<script src="js/dataTables.bootstrap4.min.js"></script>
+	<script src="js/EventRequest.js"></script>
+	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src='https://maps.google.com/maps/api/js?key=AIzaSyCo91IhVpvvqxNVCZqPkXILH9zGXJL8Zbw'></script>
     <script src="js/locationpicker.jquery.min.js"></script>
     <script src="js/navBar.js"></script>
+
 
   </head>
 
@@ -85,9 +96,6 @@
 		  <li class="nav-item">
 			 <a class="nav-link" href="RSOSearch.html">RSO Search</a>
 		  </li>
-		  <li class="nav-item">
-          <a id="createUniNav" class="nav-link" href="CreateNewUni.html">Create New University</a>
-        </li>
 		 </ul>
 		</nav>
  
@@ -230,7 +238,7 @@
 								                             radiusInput: $('#us3-radius'),
 								                             locationNameInput: $('#us3-address')
 								                                },
-								                                enableAutocomplete: true
+								                                //enableAutocomplete: true
 								                            });
 								                            $('#us6-dialog').on('shown.bs.modal', function () {
 								                                $('#us3').locationpicker('autosize');
@@ -251,13 +259,13 @@
 				    		<div class="col-md-6">
 				    			<div class="form-group">
 				    				<label class="control-label" for="latitude">Location Latitude</label>
-				    				<input class="form-control" id="latitude" name="latitude" type="number">
+				    				<input class="form-control" id="latitude" name="latitude">
 				    			</div>
 				    		</div>
 				    		<div class="col-md-6">
 				    			<div class="form-group">
 				    				<label class="control-label" for="longitude">Location Longitude</label>
-				    				<input class="form-control" id="longitude" name="longitude" type="number">
+				    				<input class="form-control" id="longitude" name="longitude">
 				    			</div>
 				    		</div>
 				    	</div>
