add create university page with js; add linik
add long awaited create new universitry page and add a missing link to
this page that was mistaklenly deleted from EventREquest.html

--- a/EventRequest.html
+++ b/EventRequest.html
@@ -96,6 +96,9 @@
 		  <li class="nav-item">
 			 <a class="nav-link" href="RSOSearch.html">RSO Search</a>
 		  </li>
+		  <li class="nav-item">
+          <a id="createUniNav" class="nav-link" href="CreateNewUni.html">Create New University</a>
+        </li>
 		 </ul>
 		</nav>
  
