--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
    <title>Event Manager</title>
 
    <!-- Bootstrap core CSS -->
+   <link href="css/bootstrap.css" rel="stylesheet">
    <link href="css/bootstrap.min.css" rel="stylesheet">
    <link href="css/bootstrap.min.css" rel="stylesheet">
    <link href="css/bootstrap-grid.css" rel="stylesheet">
