Comment section comment types
adds comment section comment types on event.html and a commented out fb
button that will be fixed soon

--- a/Event.html
+++ b/Event.html
@@ -232,6 +232,12 @@ mysqli_select_db($db, $dbname) or die("cannot select DB");
 					    			</div>
 					    		</div>
 					    	</div>
+					    	<!--fb button WIP-->
+					    	<!--<div class="row">
+					    		<div class="col-md-12">			
+					    			<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=Event.html?key=+&p[images][0]=&p[title]=Title%20Goes%20Here&p[summary]=Description%20goes%20here!" target="_blank" onclick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=250'); return false"><button style="width:100%; margin-top:10px;" type="button" class="btn btn-facebook btn-lg"><i class="fa fa-facebook fa-2"></i> Share on Facebook</button></a>
+					    		</div>
+					    	</div>-->
 				    	</form>
 				    </div>
 				  </div>
@@ -247,18 +253,68 @@ mysqli_select_db($db, $dbname) or die("cannot select DB");
 						  <strong>Success!</strong> Your comment/rating has been successfully submitted. 
 						</div>
 				    	<div class="row">
-							<div class="col-sm-2">
-								<div class="thumbnail">
-									<img class="img-responsive user-photo" src="https://ssl.gstatic.com/accounts/ui/avatar_2x.png">
-								</div><!-- /thumbnail -->
-							</div><!-- /col-sm-1 -->
-							<div class="col-sm-10">
+							<div class="col-sm-12">
 								<div class="panel panel-default">
 									<div class="panel-heading">
-										<strong>myusername</strong>
+										<div class="row">
+											<strong id="userName" style="position:relative; left:15px;">myUsername</strong>
+											<div class="col-md-3" style="position:absolute; left:450px;">
+								    			<div class="form-group pull-right">
+								    				<button id="edit" class="form-control btn btn-success">Edit</button>
+								    			</div>
+								    		</div>
+								    		<div class="col-md-3" style="position:absolute; left:450px;">
+								    			<div class="form-group pull-right">
+								    				<button id="submit" class="form-control btn btn-primary">Submit</button>
+								    			</div>
+								    		</div>							
+										</div>
+										<div class="row">
+											<form class="form-inline">
+												<div class="form-group col-md-5">
+													<label class="control-label"> Rating: </label>
+													<select id="rating" class="form-control" required="">
+									    				<option value="1" selected>1</option>
+									    				<option value="2">2</option>
+									    				<option value="3">3</option>
+									    				<option value="4">4</option>
+									    				<option value="5">5</option>
+									    			</select>
+												</div>
+											</form>
+											<div class="col-md-3" style="position:absolute; left:450px; top:40px">
+								    			<div class="form-group pull-right">
+								    				<button id="delete" class="form-control btn btn-danger">Delete</button>
+								    			</div>
+								    		</div>
+								    		<div class="col-md-3" style="position:absolute; left:450px; top:40px">
+								    			<div class="form-group pull-right">
+								    				<button id="cancel" class="form-control btn btn-danger">Cancel</button>
+								    			</div>
+								    		</div>
+										</div>
 									</div>
 									<div class="panel-body">
-										Panel content
+										<textarea id="comment" class="form-control" rows="3" required="">this is some comment</textarea>
+									</div><!-- /panel-body -->
+								</div><!-- /panel panel-default -->
+							</div><!-- /col-sm-5 -->
+						</div><!-- /row -->
+						<div class="row">
+							<div class="col-sm-12">
+								<div class="panel panel-default">
+									<div class="panel-heading">
+										<div class="row">
+											<strong id="userName2" style="position:relative; left:15px;">notMyUsername</strong>															
+										</div>
+										<div class="row" style="position:relative; left:15px;">
+											<div> Rating: 
+												<strong id="rating" style="color:red;">4</strong>
+											</div>											
+										</div>
+									</div>
+									<div id="comment" class="panel-body">
+										this is an example comment to act as a template for pulling actual comments to db.
 									</div><!-- /panel-body -->
 								</div><!-- /panel panel-default -->
 							</div><!-- /col-sm-5 -->
