--- a/Event.html
+++ b/Event.html
@@ -232,12 +232,11 @@ mysqli_select_db($db, $dbname) or die("cannot select DB");
 					    			</div>
 					    		</div>
 					    	</div>
-					    	<!--fb button WIP-->
-					    	<!--<div class="row">
+					    	<div class="row">
 					    		<div class="col-md-12">			
-					    			<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=Event.html?key=+&p[images][0]=&p[title]=Title%20Goes%20Here&p[summary]=Description%20goes%20here!" target="_blank" onclick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=250'); return false"><button style="width:100%; margin-top:10px;" type="button" class="btn btn-facebook btn-lg"><i class="fa fa-facebook fa-2"></i> Share on Facebook</button></a>
+					    			<a href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]=Event.html?key=6&p[images][0]=&p[title]=Title%20Goes%20Here&p[summary]=Description%20goes%20here!" target="_blank" onclick="window.open(this.href,'targetWindow','toolbar=no,location=0,status=no,menubar=no,scrollbars=yes,resizable=yes,width=600,height=250'); return false"><button style="width:100%; margin-top:10px;" type="button" class="btn btn-facebook btn-lg"><i class="fa fa-facebook fa-2"></i> Share on Facebook</button></a>
 					    		</div>
-					    	</div>-->
+					    	</div>
 				    	</form>
 				    </div>
 				  </div>
