--- a/RSORequest.html
+++ b/RSORequest.html
@@ -91,7 +91,7 @@
 					  <strong>Success!</strong> Your RSO Request has been successfully submitted. 
 					</div>
 					<!--- change based on directory action-->
-			    	<form id="genInfo" method="POST" action="/Database Project/RSOAction.php" onsubmit="return validateForm()"> 
+			    	<form id="genInfo" method="POST" action="/RSOAction.php" onsubmit="return validateForm()"> 
 				    	<div class="row">
 				    		<div class="col-md-12">
 				    			<div class="form-group">
