--- a/RSOSearch.html
+++ b/RSOSearch.html
@@ -148,6 +148,8 @@
    <script src="js/bootstrap.min.js"></script>
    <script src="js/jquery-1.12.4.js"></script>
    <script src="js/jquery.dataTables.min.js"></script>
+   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.1.1/jquery-confirm.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.1.1/jquery-confirm.min.js"></script>
    <script src="js/RSOSearch.js"></script>
    <script src="js/navBar.js"></script>
 
