comment out forgotten alert

--- a/profilePage.html
+++ b/profilePage.html
@@ -183,7 +183,7 @@
                                        
                                         var js_variable  = '<?php echo $email;?>';
 
-                                        alert(js_variable);
+                                        //alert(js_variable);
                                        
                                       var x = schoolFromEmail(js_variable); 
 
