minor text fixes

--- a/Event.html
+++ b/Event.html
@@ -152,7 +152,7 @@ mysqli_select_db($db, $dbname) or die("cannot select DB");
 			 <a class="nav-link" href="RSORequest.html">Request New RSO</a>
 		  </li>
 		  <li class="nav-item">
-			 <a id="createEventNav" class="nav-link active" href="EventRequest.hmtl">Create New Event<span class="sr-only">(current)</span></a>
+			 <a id="createEventNav" class="nav-link" href="EventRequest.hmtl">Create New Event</a>
 		  </li>
 		  <li class="nav-item">
 			 <a class="nav-link" href="RSOSearch.html">RSO Search</a>
@@ -272,7 +272,7 @@ mysqli_select_db($db, $dbname) or die("cannot select DB");
 											<strong id="userName" style="position:relative; left:15px;"><?php echo $email;?></strong>
 											<div class="col-md-3" style="position:absolute; left:450px;">
 								    			<div class="form-group pull-right">
-								    				<button id="edit" class="form-control btn btn-success">Edit</button>
+								    				<button id="edit" class="form-control btn btn-success">New</button>
 								    			</div>
 								    		</div>
 								    		<div class="col-md-3" style="position:absolute; left:450px;">
