add some images bc why not
looks better than circles

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
           <span class="text-muted">6 Events - 8 Hours</span>
         </div>
         <div class="col-6 col-sm-3 placeholder">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+          <img src="images/ucfchess.png" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
           <h4>UCF Chess</h4>
           <span class="text-muted">4 Events - 5 hours</span>
         </div>
         <div class="col-6 col-sm-3 placeholder">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIABAADcgwAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
+          <img src="images/fsuswim.jpg" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
           <h4>FSU Swim</h4>
           <span class="text-muted">2 Events - 2 Hours</span>
         </div>
