--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
        </section>
 
-       <h2>Today's Events</h2>
+       <h2>Upcoming Events</h2>
        <table id="myEventsTable" class="table table-striped table-hover table-bordered" cellspacing="0" width="100%">
           <thead>
            <tr>
