Hide RSO Request from admins and sadmins
had to add an id to the nav link and then hide it in navbar.js

--- a/Event.html
+++ b/Event.html
@@ -149,7 +149,7 @@ mysqli_select_db($db, $dbname) or die("cannot select DB");
           <a class="nav-link" href="EventMap.html">Event Map</a>
         </li>
 		  <li class="nav-item">
-			 <a class="nav-link" href="RSORequest.html">Request New RSO</a>
+			 <a id="rsoRequest" class="nav-link" href="RSORequest.html">Request New RSO</a>
 		  </li>
 		  <li class="nav-item">
 			 <a id="createEventNav" class="nav-link" href="EventRequest.hmtl">Create New Event</a>
