--- a/EventMap.html
+++ b/EventMap.html
@@ -87,7 +87,7 @@
           <a class="nav-link active" href="EventMap.html">Event Map<span class="sr-only">(current)</span></a>
         </li>
       <li class="nav-item">
-       <a class="nav-link" href="RSORequest.html">Request New RSO</a>
+       <a id="rsoRequest" class="nav-link" href="RSORequest.html">Request New RSO</a>
       </li>
       <li class="nav-item">
        <a id="createEventNav" class="nav-link" href="EventRequest.html">Create New Event</a>
