--- a/EventRequest.html
+++ b/EventRequest.html
@@ -88,7 +88,7 @@
           <a class="nav-link" href="EventMap.html">Event Map</a>
         </li>
 		  <li class="nav-item">
-			 <a class="nav-link" href="RSORequest.html">Request New RSO</a>
+			 <a id="rsoRequest" class="nav-link" href="RSORequest.html">Request New RSO</a>
 		  </li>
 		  <li class="nav-item">
 			 <a id="createEventNav" class="nav-link active" href="EventRequest.html">Create New Event<span class="sr-only">(current)</span></a>
