--- a/RSORequest.html
+++ b/RSORequest.html
@@ -64,7 +64,7 @@
           <a class="nav-link" href="EventMap.html">Event Map</a>
         </li>
 		  <li class="nav-item">
-			 <a class="nav-link active" href="RSORequest.html">Request New RSO<span class="sr-only">(current)</span></a>
+			 <a id="rsoRequest" class="nav-link active" href="RSORequest.html">Request New RSO<span class="sr-only">(current)</span></a>
 		  </li>
 		  <li class="nav-item">
 			 <a id="createEventNav" class="nav-link" href="EventRequest.html">Create New Event</a>
