--- a/UniEvents.html
+++ b/UniEvents.html
@@ -71,7 +71,7 @@
           <a class="nav-link" href="EventMap.html">Event Map</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="RSORequest.html">Request New RSO</a>
+          <a id="rsoRequest" class="nav-link" href="RSORequest.html">Request New RSO</a>
         </li>
         <li class="nav-item">
           <a id="createEventNav" class="nav-link" href="EventRequest.html">Create New Event</a>
