--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <li class="nav-item">
           <a class="nav-link" href="EventMap.html">Event Map</a>
         </li>
-        <li class="nav-item">
+        <li id="rsoRequest" class="nav-item">
           <a class="nav-link" href="RSORequest.html">Request New RSO</a>
         </li>
         <li id="createEventNav" class="nav-item">
