--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
        </section>
 
-       <h2>Upcoming Events</h2>
+       <h2>Today's Events</h2>
        <table id="myEventsTable" class="table table-striped table-hover table-bordered" cellspacing="0" width="100%">
           <thead>
            <tr>
@@ -126,6 +126,7 @@
           $dbuser = "web";
           $dbpass = "localpassword";
           $dbname = "eventsite";
+          date_default_timezone_set("America/New_York");
           $db = mysqli_connect($dbhost,$dbuser,$dbpass,$dbname) or die("cannot connect"); 
 
 
@@ -138,7 +139,9 @@
 
           echo "<tbody>";
           while($row = mysqli_fetch_array($result)){   //Creates a loop to loop through results
-          echo "<tr class='clickable-row' data-href='Event.html?key='><td>" . $row['eventID'] . "</td><td>" . $row['name'] . "</td><td>" . $row['date'] . "</td><td>" . $row['locationName'] .  "</td><td>" . $row['category'] ."</td></tr>";  
+            if(date("Y-m-d") == $row['date']) {
+              echo "<tr class='clickable-row' data-href='Event.html?key='><td>" . $row['eventID'] . "</td><td>" . $row['name'] . "</td><td>" . $row['date'] . "</td><td>" . $row['locationName'] .  "</td><td>" . $row['category'] ."</td></tr>";  
+            }
           }
 
           echo "</tbody>"; //Close the table in HTML
