--- a/Event.html
+++ b/Event.html
@@ -106,7 +106,7 @@ mysqli_select_db($db, $dbname) or die("cannot select DB");
 	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
     <script src="js/locationpicker.jquery.min.js"></script>
-    <!--<script src="js/navBar.js"></script>-->
+    <script src="js/navBar.js"></script>
 
   </head>
 
