add some contraints and real user school on profpg

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<?php
+  session_start();
+?>
 <!--index.html 3/21/17-->
 <!DOCTYPE html>
 <html lang="en">
@@ -120,7 +123,10 @@
 
 
           <?php
-          
+
+          //session_start();
+          ini_set('display_errors', 1);
+          ini_set('display_startup_errors', 1);          
 
           $dbhost = "localhost";
           $dbuser = "web";
@@ -138,9 +144,50 @@
           $result = mysqli_query($db, $query) or die(mysqli_error($db));
 
           echo "<tbody>";
-          while($row = mysqli_fetch_array($result)){   //Creates a loop to loop through results
+
+          $currUserEmail = $_SESSION['varemail'];
+          $currUserEmailEnd = substr($currUserEmail, strrpos($currUserEmail, '@')+1, strlen($currUserEmail));
+            if(strrpos($currUserEmailEnd, 'ucf') !== false) {
+              $currUserSchool = 'UCF';
+            }
+            if(strrpos($currUserEmailEnd, 'uf') !== false) {
+              $currUserSchool = 'UF';
+            }
+            if(strrpos($currUserEmailEnd, 'fsu') !== false) {
+              $currUserSchool = 'FSU';
+            }
+            if(strrpos($currUserEmailEnd, 'gt') !== false) {
+              $currUserSchool = 'GT';
+            }
+
+
+          //Creates a loop to loop through results
+          while($row = mysqli_fetch_array($result)) { 
+
+            //gets school of event
+            $creatorEmail = $row['email']; 
+            $emailEnd = substr($creatorEmail, strrpos($creatorEmail, '@')+1, strlen($creatorEmail));
+            if(strrpos($emailEnd, 'ucf') !== false) {
+              $eventSchool = 'UCF';
+            }
+            if(strrpos($emailEnd, 'uf') !== false) {
+              $eventSchool = 'UF';
+            }
+            if(strrpos($emailEnd, 'fsu') !== false) {
+              $eventSchool = 'FSU';
+            }
+            if(strrpos($emailEnd, 'gt') !== false) {
+              $eventSchool = 'GT';
+            }
+
+            //determines if event should be dipslayed for user based on permissions:
+            // public events today, private events that are at the same university as the user today, and  RSO Events that are of the RSO(s) the user belongs to happening today
+
             if(date("Y-m-d") == $row['date']) {
-              echo "<tr class='clickable-row' data-href='Event.html?key='><td>" . $row['eventID'] . "</td><td>" . $row['name'] . "</td><td>" . $row['date'] . "</td><td>" . $row['locationName'] .  "</td><td>" . $row['category'] ."</td></tr>";  
+              //need to add constraint for events of type rso_eveent 
+              if( ($row['type'] == 'Public') || ($row['type'] == 'Private' && $currUserSchool == $eventSchool) ) {
+                echo "<tr class='clickable-row' data-href='Event.html?key='><td>" . $row['eventID'] . "</td><td>" . $row['name'] . "</td><td>" . $row['date'] . "</td><td>" . $row['locationName'] .  "</td><td>" . $row['category'] ."</td></tr>";  
+              }
             }
           }
 
