--- a/Event.html
+++ b/Event.html
@@ -136,7 +136,7 @@ mysqli_select_db($db, $dbname) or die("cannot select DB");
 		<nav class="col-sm-3 col-md-2 bg-faded sidebar">
 		 <ul class="nav nav-pills flex-column">
 		  <li class="nav-item">
-			 <a class="nav-link" href="index.html">All Events</a>
+			 <a class="nav-link" href="index.html">Today's Events</a>
 		  </li>
 		  <li class="nav-item">
 			 <a class="nav-link" href="myEvents.html">My Events</a>
