--- a/EventMap.html
+++ b/EventMap.html
@@ -75,7 +75,7 @@
     <nav class="col-sm-3 col-md-2 bg-faded sidebar">
      <ul class="nav nav-pills flex-column">
       <li class="nav-item">
-       <a class="nav-link" href="index.html">All Events</a>
+       <a class="nav-link" href="index.html">Today's Events</a>
       </li>
       <li class="nav-item">
        <a class="nav-link" href="myEvents.html">My Events</a>
