--- a/UniEvents.html
+++ b/UniEvents.html
@@ -59,7 +59,7 @@
       <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
        <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">All Events</a>
+          <a class="nav-link" href="index.html">Today's Events</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="myEvents.html">My Events<span class="sr-only">(current)</span></a>
