--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <nav class="col-sm-3 col-md-2 hidden-xs-down bg-faded sidebar">
        <ul class="nav nav-pills flex-column">
         <li class="nav-item">
-          <a class="nav-link active" href="index.html">Today's Eventss<span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="index.html">Today's Events<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="myEvents.html">My Events</a>
